<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SyncLists</string>
    <string name="login_text">Login</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>

    <string name="list_deleted">List deleted</string>
    <string name="tap_to_undo">Tap to undo</string>

    <string name="task_deleted">Task deleted</string>

    <string name="add_list">Add List</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>

    <!-- Setting Option -->
    <string name="change_password">Change Password</string>
    <string name="sync_every">Sync Every...</string>
    <string name="instructions">Instructions</string>
    <string name="sharing_toggle_on">On</string>
    <string name="sharing_toggle_off">Off</string>
    <string name="sharing">Sharing</string>

    <string name="cancel">Cancel</string>

    <string name="newListName">New list name</string>
    <string name="logout">Logout</string>

    <string name="popup_edit_list_label">New list name</string>
    <string name="popup_edit_task_label">New task name</string>

    <string name="shared_users_title">Shared Users</string>
    <string name="share_with_user">Enter email to share with</string>

    <!-- Icon Fonts -->
    <string name="cog">&#xf013;</string>
    <string name="plus">&#xf067;</string>
    <string name="close_x">&#xf00d;</string>
    <string name="checkmark">&#xf046;</string>
    <string name="fa_edit">&#xf044;</string>
    <string name="fa_share_alt">&#xf1e0;</string>
    <!-- Instruction text -->
    <string name="add_list_instruction">To add a list, simply click the plus button and add a name.</string>
    <string name="remove_list_instruction">Once you are done with a list, swipe the list to delete.</string>
    <string name="view_tasks_instruction">Once you create a list, click on it to view its tasks.</string>
    <string name="create_task_instruction">To create a task in your list, hit the plus button and add a name.</string>
    <string name="complete_task_instruction">Once you have finished a task on the list, you can check it to mark it as completed or swipe it to delete it from the list.</string>
    <string name="share_list_instruction">Click on the share icon on a list and  enter a friend\'s email to share the list.</string>
    <string name="view_share_list_instruction">Click on the share icon to see who a list has been shared with.</string>
    <string name="unshare_list_instruction">Click on the red \"x\" next to an email to unshare the list with that person.</string>
    <string name="refresh_instruction">Click on the refresh button at the top to refresh lists or tasks manually.</string>
    <string name="OK">OK</string>
    <!-- Change Password Dialog -->
    <string name="new_password_hint">New Password</string>
    <string name="confirm_new_password_hint">Confirm New Password</string>
    <string name="confirm_change_password">Confirm Change</string>

</resources>
